# dpdata_DFTBplus

./: README.md  pyproject.toml
dpdata_DFTBplus/: dpdata_plugin.py  read_DFTBplus.py
tests/: test.py
