[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dpdata_DFTBplus"
dynamic = ["version"]
description = ""
authors = [
    { name = "RuiHao Liao", email = "zy2119205@buaa.edu.cn"},
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    'numpy',
    'dpdata',
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["dpdata", "DFTBplus"]

[project.urls]
repository = "https://github.com/ruio248/dpdata_DFTBplus"

[project.optional-dependencies]

[project.entry-points."dpdata.plugins"]
dftbplus = "dpdata_DFTBplus.dpdata_plugin:DFTBplusFormat"

[tool.setuptools.packages.find]
include = ["dpdata_DFTBplus*"]

[tool.setuptools_scm]
